--- a/tpl/track.html
+++ b/tpl/track.html
@@ -8,9 +8,10 @@
 <div class="content">
     <a id="start" class="button-positive">Start</a>
     <a id="stop" class="button-negative">Stop</a>
-
-    <ul class="inset list">
-        <li id="stopwatch" class="segmented-controller-item active">
-        </li>
-   </ul>
+    <p>
+    Tracked:<span id="distance">0</span> km
+    </p>
+    <p>
+    Time:<span id="time"></span>
+  </p>
 </div>
