--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 </body>
 
-<script src="lib/cordova-2.9.0.js"></script>
+<!--<script src="lib/cordova-2.9.0.js"></script>-->
 <script src="lib/fastclick-0.6.11.js"></script>
 <script src="lib/pageslider.js"></script>
 <script src="lib/jquery-1.10.2.min.js"></script>
@@ -39,4 +39,5 @@
 <script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script src="js/views.js"></script>
+<script src="js/geotracking.js"></script>
 </html>
