--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="lib/handlebars-v1.3.0.js"></script>
+<script src="lib/ratchet.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script src="js/views.js"></script>
