--- a/tpl/home.html
+++ b/tpl/home.html
@@ -3,17 +3,41 @@
 </header>
 
 <div class="content">
-    <nav class="bar-standard">
-        <ul class="segmented-controller">
-        <li class="active">
-            <a href="#">Home</a>
-        </li>
-        <li>
-            <a href="#track">Go Running</a>
-        </li>
-        <li>
-        <a href="#history">History</a>
-        </li>
-        </ul>
-    </nav>
+
+    <div class="row">
+      <div class="col-xs-12">
+          <h3 class="text-center">Runopoly</h3>
+          <h5 class="text-center">"Run to win territory"</h5>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-6">
+        <a href="#track" class="thumbnail">
+          <img data-src="holder.js/100%x180" alt="...">
+        </a>
+      </div>
+      <div class="col-xs-6">
+        <a href="#standing" class="thumbnail">
+          <img data-src="holder.js/100%x180" alt="...">
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6">
+        <a href="#area" class="thumbnail">
+            <img data-src="holder.js/100%x180" alt="...">
+        </a>
+      </div>
+      <div class="col-xs-6">
+       <a href="#history" class="thumbnail">
+            <img data-src="holder.js/100%x180" alt="...">
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+          <div id="network" class="alert">...</div>
+      </div>
+    </div>
 </div>
