--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Runopoly</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/ratchet.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="css/ratchet.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/pageslider.css">
     <!--<link rel="stylesheet" href="css/styles.css">-->
 </head>
@@ -35,6 +37,8 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="lib/handlebars-v1.3.0.js"></script>
+<script src="lib/bootstrap.min.js"></script>
+
 <script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script src="js/views.js"></script>
