--- a/tpl/home.html
+++ b/tpl/home.html
@@ -4,6 +4,7 @@
 
 <div class="content">
 
+    <!-- Title -->
     <div class="row">
       <div class="col-xs-12">
           <h3 class="text-center">Runopoly</h3>
@@ -11,9 +12,10 @@
       </div>
     </div>
 
+    <!-- Run and standing button -->
     <div class="row">
       <div class="col-xs-6">
-        <a href="#track" class="thumbnail">
+        <a href="#run" class="thumbnail">
           <img data-src="holder.js/100%x180" alt="...">
         </a>
       </div>
@@ -23,6 +25,8 @@
         </a>
       </div>
     </div>
+
+    <!-- Area and history button -->
     <div class="row">
       <div class="col-xs-6">
         <a href="#area" class="thumbnail">
@@ -35,6 +39,8 @@
         </a>
       </div>
     </div>
+
+    <!-- Network access info -->
     <div class="row">
       <div class="col-xs-12">
           <div id="network" class="alert">...</div>
