--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 </body>
 
-<!--<script src="cordova.js"></script>-->
+<script src="cordova.js"></script>
 <script src="lib/fastclick-0.6.11.js"></script>
 <script src="lib/pageslider.js"></script>
 <script src="lib/jquery-1.10.2.min.js"></script>
