--- a/tpl/run.html
+++ b/tpl/run.html
@@ -9,7 +9,7 @@
 
     <!-- time and km -->
     <div class="row">
-      <div class="col-xs-6">
+      <div id="stopwatch" class="col-xs-6">
       </div>
       <div class="col-xs-6">
       </div>
