--- a/tpl/home.html
+++ b/tpl/home.html
@@ -43,7 +43,7 @@
     <!-- Network access info -->
     <div class="row">
       <div class="col-xs-12">
-          <div id="network" class="alert">...</div>
+          <div id="network" class="alert">{{NetworkActive}}</div>
       </div>
     </div>
 </div>
