--- a/index.html
+++ b/index.html
@@ -41,5 +41,7 @@
 
 <script src="js/utils.js"></script>
 <script src="js/app.js"></script>
+<script src="js/models.js"></script>
 <script src="js/views.js"></script>
+
 </html>
