--- a/tpl/run.html
+++ b/tpl/run.html
@@ -9,7 +9,8 @@
 
     <!-- time and km -->
     <div class="row">
-      <div id="stopwatch" class="col-xs-6">
+      <div class="col-xs-6">
+      <h1 id="clock">00:00</h1>
       </div>
       <div class="col-xs-6">
       </div>
@@ -30,14 +31,10 @@
     <!-- Start and stop button -->
     <div class="row">
       <div class="col-xs-6">
-        <a id="start" class="thumbnail">
-          <img data-src="holder.js/100%x180" alt="...">
-        </a>
+        <button class="btn btn-success btn-lg" id="start-pause">Start</button>
       </div>
       <div class="col-xs-6">
-        <a id="stop" class="thumbnail">
-          <img data-src="holder.js/100%x180" alt="...">
-        </a>
+        <button class="btn btn-danger btn-lg" id="stop-reset">Stop</button>
       </div>
     </div>
 </div>
