--- a/tpl/run.html
+++ b/tpl/run.html
@@ -13,6 +13,7 @@
       <h1 id="clock">00:00</h1>
       </div>
       <div class="col-xs-6">
+          <h1 id="distance">0</h1>
       </div>
     </div>
     
