--- a/tpl/home.html
+++ b/tpl/home.html
@@ -29,7 +29,7 @@
     <!-- Area and history button -->
     <div class="row">
       <div class="col-xs-6">
-        <a href="#area" class="thumbnail">
+        <a href="#areas" class="thumbnail">
             <img data-src="holder.js/100%x180" alt="...">
         </a>
       </div>
