--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 <script src="lib/backbone-min.js"></script>
 <script src="lib/handlebars-v1.3.0.js"></script>
 <script src="lib/bootstrap.min.js"></script>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpZvm6W9ymw1XuwcznqySoPamxcN4Ev64&sensor=false"></script>
+    
 <script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script src="js/models.js"></script>
 <script src="js/views.js"></script>
+<script src="js/areas.js"></script>
 
 </html>
