--- a/tpl/home.html
+++ b/tpl/home.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-xs-6">
         <a href="#run" class="thumbnail">
-          <img data-src="holder.js/100%x180" alt="...">
+          <img data-src="holder.js/100%x180" alt="Go Running">
         </a>
       </div>
       <div class="col-xs-6">
@@ -30,12 +30,12 @@
     <div class="row">
       <div class="col-xs-6">
         <a href="#areas" class="thumbnail">
-            <img data-src="holder.js/100%x180" alt="...">
+            <img data-src="holder.js/100%x180" alt="Battle grounds">
         </a>
       </div>
       <div class="col-xs-6">
        <a href="#history" class="thumbnail">
-            <img data-src="holder.js/100%x180" alt="...">
+            <img data-src="holder.js/100%x180" alt="History">
         </a>
       </div>
     </div>
@@ -43,7 +43,7 @@
     <!-- Network access info -->
     <div class="row">
       <div class="col-xs-12">
-          <div id="network" class="alert">{{NetworkActive}}</div>
+          <div id="network" class="alert">{{networkActive}}</div>
       </div>
     </div>
 </div>
