--- a/tpl/run.html
+++ b/tpl/run.html
@@ -13,7 +13,7 @@
       <h1 id="clock">00:00</h1>
       </div>
       <div class="col-xs-6">
-          <h1 id="distance">0</h1>
+          <h1 id="distance">0.00</h1>
       </div>
     </div>
     
@@ -26,6 +26,13 @@
     <!-- km in area -->
     <div class="row">
       <div class="col-xs-12">
+      </div>
+    </div>
+
+        <!-- Network access info -->
+    <div class="row">
+      <div class="col-xs-12">
+          <div id="gps_accuracy">Checkin GPS signal...</div>
       </div>
     </div>
 
