--- a/tpl/area.html
+++ b/tpl/area.html
@@ -5,6 +5,4 @@
     <h1 class="title">{{name}}</h1>
 </header>
 
-<div class="content">
-    <div id="map_canvas" style="position:absolute;bottom:0;left:0;width:100%;height:300px;"></div>
-</div>
+<div id="map_canvas" style="position:absolute;bottom:0;left:0;width:100%;height:100%;"></div>
