--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="css/ratchet.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/pageslider.css">
-    <!--<link rel="stylesheet" href="css/styles.css">-->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div id="container">
@@ -38,11 +38,10 @@
 <script src="lib/backbone-min.js"></script>
 <script src="lib/handlebars-v1.3.0.js"></script>
 <script src="lib/bootstrap.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpZvm6W9ymw1XuwcznqySoPamxcN4Ev64&sensor=false"></script>
-    
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpZvm6W9ymw1XuwcznqySoPamxcN4Ev64&sensor=false&libraries=geometry"></script>
 <script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script src="js/views.js"></script>
 <script src="js/areas.js"></script>
-
+<script src="lib/v3_eshapes.js"></script>
 </html>
