--- a/tpl/area.html
+++ b/tpl/area.html
@@ -2,7 +2,11 @@
     <a class="button-prev" href="#areas">
         Back
     </a>
+    {{#if .}}
     <h1 class="title">{{name}}</h1>
+    {{else}}
+    <h1 class="title">{{id}}</h1>
+    {{/if}}
 </header>
 
 <div id="map_canvas" style="position:absolute;bottom:0;left:0;width:100%;height:100%;"></div>
