--- a/tpl/run.html
+++ b/tpl/run.html
@@ -1,7 +1,7 @@
 
 <header class="header">
     <a href="#" class="header-button header-button-left header-back-button">
-        <button><</button>
+        <button></button>
     </a>
     <h1>RUNOPOLY</h1>
 </header>
