--- a/tpl/area.html
+++ b/tpl/area.html
@@ -1,12 +1,9 @@
-<header class="bar-title">
-    <a class="button-prev" href="#areas">
-        Back
+<header class="header">
+    <a href="#areas" class="header-button header-button-left header-back-button">
+        <button></button>
     </a>
-    {{#if .}}
-    <h1 class="title">{{name}}</h1>
-    {{else}}
-    <h1 class="title">{{id}}</h1>
-    {{/if}}
+    <h1>RUNOPOLY</h1>
 </header>
-
-<div id="map_canvas" style="position:absolute;bottom:0;left:0;width:100%;height:100%;"></div>
+<div class="content">
+    <div id="map_canvas" style="position:absolute;top:44px;bottom:0;left:0;width:100%;height:100%;"></div>
+</div>
