--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
     <div id="container">
     </div>
 
@@ -28,6 +29,7 @@
         <div class="bar11"></div>
         <div class="bar12"></div>
     </div>
+
 </body>
 
 <script src="cordova.js"></script>
@@ -41,5 +43,6 @@
 <script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script src="js/views.js"></script>
+<script src="js/RunopolyWebAPI.js"></script>
 <script src="lib/v3_eshapes.js"></script>
 </html>
