--- a/tpl/home.html
+++ b/tpl/home.html
@@ -1,14 +1,10 @@
-<div class="header">
-     <p id="network">{{networkActive}}</p>
-</div>
-
 <div class="content">
         
-    <ul class="menu" id="menu">
-        <li><a href="#run"><span class="button-header">RUN</span><br /><span>Run to win areas</span></a></li>
-        <li><a href="#areas"><span class="button-header">AREAS</span><br /><span>Run to win areas</span></a></li>
-        <li><a href="#standings"><span class="button-header">winners</span><br /><span>Run to win areas</span></a></li>
-        <li><a href="#history"><span class="button-header">history</span><br /><span>Run to win areas</span></a></li>
+    <ul class="homemenu" id="homemenu">
+        <li><a href="#run"><span class="headertext">RUN</span><br /><span>Run to Win Areas</span></a></li>
+        <li><a href="#areas"><span class="headertext">AREAS</span><br /><span>Nearby Areas to Win</span></a></li>
+        <li><a href="#owners"><span class="headertext">OWNERS</span><br /><span>Who Owns the Areas</span></a></li>
+        <li><a href="#history"><span class="headertext">HISTORY</span><br /><span>Your Runopoly History</span></a></li>
     </ul>
 
 </div>
