--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <link href="css/topcoat-mobile-light.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/ratchet.css" />
+    <link rel="stylesheet" href="css/ratchet-theme-ios.css" />    
     <link rel="stylesheet" href="css/pageslider.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -40,9 +41,11 @@
 <script src="lib/backbone-min.js"></script>
 <script src="lib/handlebars-v1.3.0.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpZvm6W9ymw1XuwcznqySoPamxcN4Ev64&sensor=false&libraries=geometry"></script>
+<script src="js/webAPI.js"></script>
+<script src="js/localStorageAPI.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script src="js/views.js"></script>
-<script src="js/RunopolyWebAPI.js"></script>
+<script src="js/models.js"></script>
 <script src="lib/v3_eshapes.js"></script>
 </html>
