--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
         <div class="bar12"></div>
     </div>
 
+    <script src="cordova.js"></script>
+    <script src="lib/jquery-1.10.2.min.js"></script>
+    <script src="lib/pageslider.js"></script>
+    <script src="lib/fastclick-0.6.11.js"></script>
+    <script src="lib/underscore-min.js"></script>
+    <script src="lib/backbone-min.js"></script>
+    <script src="lib/handlebars-v1.3.0.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpZvm6W9ymw1XuwcznqySoPamxcN4Ev64&sensor=false&libraries=geometry"></script>
+    <!--<script src="js/webAPI.js"></script>-->
+    <script src="js/localStorageAPI.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/views.js"></script>
+    <script src="js/models.js"></script>
+    <script src="js/handlebarshelpers.js"></script>
+    <script src="lib/v3_eshapes.js"></script>
 </body>
-
-<script src="cordova.js"></script>
-<script src="lib/jquery-1.10.2.min.js"></script>
-<script src="lib/pageslider.js"></script>
-<script src="lib/fastclick-0.6.11.js"></script>
-<script src="lib/underscore-min.js"></script>
-<script src="lib/backbone-min.js"></script>
-<script src="lib/handlebars-v1.3.0.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpZvm6W9ymw1XuwcznqySoPamxcN4Ev64&sensor=false&libraries=geometry"></script>
-<script src="js/webAPI.js"></script>
-<script src="js/localStorageAPI.js"></script>
-<script src="js/utils.js"></script>
-<script src="js/app.js"></script>
-<script src="js/views.js"></script>
-<script src="js/models.js"></script>
-<script src="lib/v3_eshapes.js"></script>
 </html>
