--- a/tpl/areas.html
+++ b/tpl/areas.html
@@ -16,7 +16,7 @@
             <a class="push-right" href="#area/{{id}}">
             <div>
                 <span class="maintext">{{name}}</span><br />
-                <span class="subtext">{{TotalKm}} km, {{NoRuns}} run(s), {{level}} runner(s)</span>
+                <span class="subtext">{{TotalKm}} km, {{NoRuns}} run(s), {{NoRunners}} runner(s)</span>
                 <!--
                 {{#if isUserArea}}
                     <div class="user pct">{{UserKm}}<span class="pctdesc"> %</span><span class="total"> af total</span></div>
