--- a/tpl/owners.html
+++ b/tpl/owners.html
@@ -8,7 +8,7 @@
 {{#if .}}
     <ul class="table-view">
         {{#each .}}
-            <!--<li class="list-divider">{{name}} ({{TotalKm}} km)</li>-->
+            <li class="table-view-cell table-view-divider">{{name}} ({{TotalKm}} km)</li>
             {{#each owners}}
                 <!--{{#if isUser}}
                     <li style="clear: both" class="user">
@@ -21,9 +21,12 @@
                         <span class="subtext">{{NoRuns}} run(s) in area</span>
                     </div>
                     <div style="float:right;margin-right:-20px">
-                        <figure class="pie blue" data-pie="90">
+                        <figure class="pie blue" data-pie="{{RunPct}}">
 					        <div class="master"></div>
 						    <div class="slice">
+                                <div class="inner"></div>
+						    </div>
+						    <div class="slice1">
                                 <div class="inner"></div>
 						    </div>
                             <div class="cover">
