--- a/tpl/homeView.html
+++ b/tpl/homeView.html
@@ -1,38 +1,41 @@
 ﻿<div class="navigation-bar">
-    <div class="navigation-bar__item left quarter float-left"></div>
-    <div class="navigation-bar__item full float-left text-centering">
-        <span class="navigation-bar__title navigation-bar__line-height float-left">RUNOPOLY</span>
+    <div class="navigation-bar__left">&nbsp; </div>
+    <div class="navigation-bar__center">
+    <span class="navigation-bar__title navigation-bar__line-height">RUNOPOLY</span>
     </div>
+    <div class="navigation-bar__right">&nbsp; </div>
 </div>
 <div class="list">
     <ul class="list__container">
     <li class="list__item list__item--tappable list__item__line-height">
+        <a href="#run">
         <span>
         <i class="fa fa-location-arrow"></i>
         </span>
-        <span class="list-item-title">Place</span>
-        <span class="list-item-comment">Current Area</span>
+        <span class="list-item-title">Løb</span>
+        <span class="list-item-comment">For at erobre områder</span>
+        </a>
     </li>
     <li class="list__item list__item--tappable list__item__line-height">
         <span>
         <i class="fa fa-cutlery"></i>
         </span>
-        <span class="list-item-title">Cuisine</span>
-        <span class="list-item-comment">Japanese, European and Chinese</span>
+        <span class="list-item-title">Områder</span>
+        <span class="list-item-comment">Områder som skal erobres</span>
     </li>
     <li class="list__item list__item--tappable list__item__line-height">
         <span>
         <i class="fa fa-ticket"></i>
         </span>
-        <span class="list-item-title">Coupon</span>
-        <span class="list-item-comment">Service and facillities</span>
+        <span class="list-item-title">Ejere</span>
+        <span class="list-item-comment">Ejere af områder</span>
     </li>
     <li class="list__item list__item--tappable list__item__line-height">
         <span>
         <i class="fa fa-ticket"></i>
         </span>
-        <span class="list-item-title">Coupon</span>
-        <span class="list-item-comment">Service and facillities</span>
+        <span class="list-item-title">Erobringer</span>
+        <span class="list-item-comment">Dine historiske erobringer</span>
     </li>
     </ul>
 </div>
