--- a/tpl/runView.html
+++ b/tpl/runView.html
@@ -1,9 +1,37 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div class="navigation-bar">
+    <div class="navigation-bar__left">
+    <span class="icon-button--quiet navigation-bar__line-height btn-back">
+        <i class="fa fa-angle-left"></i>&nbsp;Back
+    </span>
+    </div>
+    <div class="navigation-bar__center">
+    <span class="navigation-bar__title">LØB</span>
+    </div>
+    <div class="navigation-bar__right">
+    <span class="icon-button--quiet navigation-bar__line-height">
+        <i class="fa fa-external-link"></i>
+    </span>
+    </div>
+</div>
+<div class="grid-menu">
+    <div class="grid-menu-2items-row centering-and-alignment">
+        <div class="grid-menu-item list__item--tappable">
+        <i class="fa fa-search"></i>
+        <div class="grid-menu-item-label">Search</div>
+        </div>
+        <div class="grid-menu-item list__item--tappable">
+        <i class="fa fa-location-arrow"></i>
+        <div class="grid-menu-item-label">Map</div>
+        </div>
+    </div>
+    <div class="grid-menu-1items-row centering-and-alignment">
+        <div class="grid-menu-item list__item--tappable">
+        <i class="fa fa-calendar"></i>
+        <div class="grid-menu-item-label">Reservation</div>
+        </div>
+    </div>
+</div>
+<div class="margin-little">
+    <button class="button">Start</button>
+    <button class="button">Stop</button>
+</div>
