--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
         <link rel="stylesheet" href="css/onsenui.css">  
         <link rel="stylesheet" href="css/topcoat-mobile-onsen-ios7.css">
-        <link  rel="stylesheet" href="css/onsen-css-components.css" />
+        <link  rel="stylesheet" href="css/onsen-css-components-default.css" />
         <link rel="stylesheet" href="css/style.css" />
         <title>Runopoly</title>
     </head>
@@ -20,9 +19,14 @@
         <script src="lib/fastclick-0.6.11.js"></script>
         <script src="lib/handlebars-v1.3.0.js"></script>
         <script src="lib/pageslider.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpZvm6W9ymw1XuwcznqySoPamxcN4Ev64&sensor=false&libraries=geometry"></script>  
         <script src="js/app.js"></script>
         <script src="js/router/router.js"></script>
         <script src="js/views/HomeView.js"></script>
+        <script src="js/views/RunView.js"></script>
+        <script src="js/models/RunViewModel.js"></script>
+        <script src="js/models/AreaViewModel.js"></script>
+        <script src="js/collections/Areas.js"></script>
         <script src="js/utils/TemplateLoader.js"></script>
     </body>
 </html>
