--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         <script src="js/router/router.js"></script>
         <script src="js/views/HomeView.js"></script>
         <script src="js/views/RunView.js"></script>
+        <script src="js/views/RunKmView.js"></script>
         <script src="js/models/RunViewModel.js"></script>
+        <script src="js/views/RunTimerView.js"></script>
         <script src="js/models/AreaViewModel.js"></script>
         <script src="js/collections/Areas.js"></script>
         <script src="js/utils/TemplateLoader.js"></script>
+        <script src="js/utils/handlebarshelpers.js"></script>
     </body>
 </html>
