--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
         <link rel="stylesheet" href="css/onsenui.css">  
         <link rel="stylesheet" href="css/topcoat-mobile-onsen-ios7.css">
-        <link  rel="stylesheet" href="css/onsen-css-components-default.css" />
+        <link rel="stylesheet" href="css/onsen-css-components-default.css" />
+        <link rel="stylesheet" href="css/pageslider.css" />
         <link rel="stylesheet" href="css/style.css" />
         <title>Runopoly</title>
     </head>
