--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <script src="js/views/RunTimerView.js"></script>
         <script src="js/models/AreaViewModel.js"></script>
         <script src="js/collections/Areas.js"></script>
+        <script src="js/models/TrackedRun.js"></script>
         <script src="js/utils/TemplateLoader.js"></script>
         <script src="js/utils/handlebarshelpers.js"></script>
     </body>
