some updates and additions

--- a/tpl/runView.html
+++ b/tpl/runView.html
@@ -25,7 +25,7 @@
     </div> 
 
     <!-- buttons --> 
-    <div>
+    <div class="buttons">
         <button class="button" id="start-pause">{{button_start_text}}</button>
         <button class="button" id="stop-reset">STOP</button>            
     </div>        
