--- a/tpl/homeView.html
+++ b/tpl/homeView.html
@@ -9,11 +9,11 @@
     <ul class="list__container">
     <li class="list__item list__item--tappable list__item__line-height">
         <a href="#run">
-        <span>
-        <i class="fa fa-location-arrow"></i>
-        </span>
-        <span class="list-item-title">Løb</span>
-        <span class="list-item-comment">For at erobre områder</span>
+            <span>
+            <i class="fa fa-location-arrow"></i>
+            </span>
+            <span class="list-item-title">Løb</span>
+            <span class="list-item-comment">For at erobre områder</span>
         </a>
     </li>
     <li class="list__item list__item--tappable list__item__line-height">
@@ -31,11 +31,13 @@
         <span class="list-item-comment">Ejere af områder</span>
     </li>
     <li class="list__item list__item--tappable list__item__line-height">
-        <span>
-        <i class="fa fa-ticket"></i>
-        </span>
-        <span class="list-item-title">Erobringer</span>
-        <span class="list-item-comment">Dine historiske erobringer</span>
+        <a href="#tracked">
+            <span>
+            <i class="fa fa-ticket"></i>
+            </span>
+            <span class="list-item-title">Erobringer</span>
+            <span class="list-item-comment">Dine historiske erobringer</span>
+        </a>
     </li>
     </ul>
 </div>
