--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <script src="js/models/AreaViewModel.js"></script>
         <script src="js/collections/Areas.js"></script>
         <script src="js/models/TrackedRun.js"></script>
+        <script src="js/collections/TrackedRuns.js"></script>
+        <script src="js/views/TrackedRunListView.js"></script>
+        <script src="js/views/TrackedRunItemView.js"></script>     
         <script src="js/utils/TemplateLoader.js"></script>
         <script src="js/utils/handlebarshelpers.js"></script>
     </body>
