--- a/tpl/homeView.html
+++ b/tpl/homeView.html
@@ -5,6 +5,21 @@
     </div>
     <div class="navigation-bar__right">&nbsp; </div>
 </div>
+
+<div class="panel-account">
+    <div>
+    <img src="images/person.png" width="70" height="70">
+    </div>
+    <div class="panel-account-text">
+    <div>&nbsp;
+        <!--<input type="text" class="text-input--underbar" placeholder="First" value="" size="15">-->
+    </div>
+    <div>&nbsp;
+        <!--<input type="text" class="text-input--underbar" placeholder="Last" value="" size="15">-->
+    </div>
+    </div>
+</div>
+
 <div class="list">
     <ul class="list__container">
     <li class="list__item list__item--tappable list__item__line-height">
@@ -17,18 +32,22 @@
         </a>
     </li>
     <li class="list__item list__item--tappable list__item__line-height">
-        <span>
-        <i class="fa fa-cutlery"></i>
-        </span>
-        <span class="list-item-title">Områder</span>
-        <span class="list-item-comment">Områder som skal erobres</span>
+        <a href="#areas">
+            <span>
+            <i class="fa fa-cutlery"></i>
+            </span>
+            <span class="list-item-title">Områder</span>
+            <span class="list-item-comment">Områder som skal erobres</span>
+        </a>
     </li>
     <li class="list__item list__item--tappable list__item__line-height">
-        <span>
-        <i class="fa fa-ticket"></i>
-        </span>
-        <span class="list-item-title">Ejere</span>
-        <span class="list-item-comment">Ejere af områder</span>
+        <a href="#owners">
+            <span>
+            <i class="fa fa-ticket"></i>
+            </span>
+            <span class="list-item-title">Ejere</span>
+            <span class="list-item-comment">Ejere af områder</span>
+        </a>
     </li>
     <li class="list__item list__item--tappable list__item__line-height">
         <a href="#tracked">
