--- a/tpl/trackedRunItemView.html
+++ b/tpl/trackedRunItemView.html
@@ -1,9 +1,9 @@
-<li class="list__item list__item--tappable list__item__line-height">
-    {{#if .}}
-    <span class="list-item-title">{{areaname}}</span>    
-    <span class="list-item-comment"> {{totalkm}} km - {{areakm}} km - {{duration}} </span>
+{{#if .}}
+<li class="list__item list__item--tappable list__item__line-height">    
+    <span class="list-item-title">{{areaname}} {{GetTimeFromDateTime startdate}}</span>    
+    <span class="list-item-comment"> {{totalkm}} km - {{areakm}} km - {{formatSeconds duration}} </span>
     <span class="list-item-action" >
         <i class="fa fa-angle-right"></i>
     </span>
-    {{/if}}
 </li>
+{{/if}}
