--- a/tpl/homeView.html
+++ b/tpl/homeView.html
@@ -11,7 +11,7 @@
     <img src="images/person.png" width="70" height="70">
     </div>
     <div class="panel-account-text">
-    <div>&nbsp;
+    <div>&nbsp;Welcome Toni
         <!--<input type="text" class="text-input--underbar" placeholder="First" value="" size="15">-->
     </div>
     <div>&nbsp;
