--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script src="lib/fastclick-0.6.11.js"></script>
         <script src="lib/handlebars-v1.3.0.js"></script>
         <script src="lib/pageslider.js"></script>
+        <script src="lib/Insomnia.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpZvm6W9ymw1XuwcznqySoPamxcN4Ev64&sensor=false&libraries=geometry"></script>  
         <script src="js/app.js"></script>
         <script src="js/router/router.js"></script>
