--- a/tpl/AreaDetailsView.html
+++ b/tpl/AreaDetailsView.html
@@ -1,9 +1,7 @@
-﻿<header>
-    <button class="left btn-back">
-        <div class="label">Back</div>
-    </button>
-    <h1>{{name}}</h1>
-</header>
+﻿<div class="bar bar-header bar-light">
+    <a class="button icon-left ion-chevron-left button-clear button-dark btn-back">Back</a>
+    <h1 class="title">{{name}}</h1>
+</div>
 
 <div class="content">
     <div id="map_canvas" style="position:absolute;top:44px;bottom:0;left:0;width:100%;height:100%;">
