--- a/tpl/leaderDetailsView.html
+++ b/tpl/leaderDetailsView.html
@@ -1,9 +1,7 @@
-﻿<header>
-    <button class="left btn-back">
-        <div class="label">Back</div>
-    </button>
-    <h1>Leaders</h1>
-</header>
+﻿<div class="bar bar-header bar-light">
+    <a class="button icon-left ion-chevron-left button-clear button-dark btn-back">Back</a>
+    <h1 class="title">Leaders</h1>
+</div>
 
 <div class="content">
 {{#if .}}    
