--- a/tpl/AreaDetailsView.html
+++ b/tpl/AreaDetailsView.html
@@ -4,6 +4,6 @@
 </div>
 
 <div class="content">
-    <div id="map_canvas" style="position:absolute;top:44px;bottom:0;left:0;width:100%;height:100%;">
-</div>
+    <div id="map_canvas" style="position:absolute;bottom:0;left:0;width:100%;height:100%;">
+    </div>
 </div>
