--- a/tpl/homeView.html
+++ b/tpl/homeView.html
@@ -1,5 +1,5 @@
-﻿<div class="list">
-    <ul class="list__container">
+﻿<center><img src="img/cartoon-vector-of-happy-boy-running.png" alt="Runopoly" align="middle"/></center>
+<ul class="list__container">
     <li class="list__item">
         <a href="#run">
             <span class="list-item-title">Get Ahead</span>
@@ -15,5 +15,18 @@
             <span class="list-item-title">Areas</span>
         </a>
     </li>
-    </ul>
+    <li class="list__item">
+        <a href="#history">
+            <span class="list-item-title">History</span>
+        </a>
+    </li>
+</ul>
+<div class="tabs tabs-icon-only">
+    <a class="tab-item" href="#editprofile">
+        <i class=" icon ion-person">
+        </i>
+    </a>
+    <a class="tab-item" href="#settings">
+        <i class="icon ion-gear-a"></i>
+    </a>
 </div>
