--- a/tpl/runView.html
+++ b/tpl/runView.html
@@ -1,5 +1,5 @@
 ﻿<div class="bar bar-header bar-light">
-    <a class="button icon-left ion-chevron-left button-clear button-dark btn-back">Back</a>
+    <a class="button icon-left ion-chevron-left button-clear button-dark btn-back"></a>
     <h1 class="title">Get Ahead</h1>
 </div>
 
